release 1.7
- Fixed issue 709
  http://java.net/jira/browse/JERSEY-709
  Avoid throwing RuntimeException eagerly when oauth-server.jar on the classpath but no OAuthProvider is registered.  
- Fixed issue 713
  http://java.net/jira/browse/JERSEY-713
  UserGuide docs typo.
- Fixed issue 712
  http://java.net/jira/browse/JERSEY-712
  Document cobertura profile usage in samples
- Fixed issue 704
  http://java.net/jira/browse/JERSEY-704
  Typo.
- Fixed issue 696
  http://java.net/jira/browse/JERSEY-696
  add missing dependency to pom.xml when sun-web.xml <class-loader delegate="false"/>
- Fixed issue 694
  http://java.net/jira/browse/JERSEY-694
  Typo.
- Fixed issue 693
  http://java.net/jira/browse/JERSEY-693
  Javadoc typos.
- Fixed issue 668
  http://java.net/jira/browse/JERSEY-668
  Removed duplicate copy of form.html in simple-console Jersey example

release 1.6 (03-2011)
- Added support for lists and arrays of JAXBElement<?> objects.
- Fixed issue 681
  http://java.net/jira/browse/JERSEY-681
  Missing repository declaration in quickstart-grizzly archetype
- Grizzly 2.0 integration
  Introduced GrizzlyWebContainerFactory in jersey-grizzly2
  Introduced jersey-tests-framework-grizzly2 and made it default
  option in test framework.
  Changed (almost) all samples to use jersey-grizzly2 for test/run.
- Added support for specifying XML header in XML responses by attaching XmlHeader annotation to the resource method.
- Fixed issue 649
  http://java.net/jira/browse/JERSEY-649
  @Path("{id}") not matched for paths containing %2F
  Introduced a new ResourceConfig feature, "com.sun.jersey.api.container.grizzly.AllowEncodedSlashFeature".
  The feature allows to configure Grizzly to enable encoded slashes in URIs
- Fixed issue 576
  http://java.net/jira/browse/JERSEY-576
  Grizzly upgraded to 1.9.31
- JacksonJsonProvider example: added ObjectMapper resolver
  to show how to use Jackon specific configuration options
- Fixed issue 625
  http://java.net/jira/browse/JERSEY-625